--- a/src/views/Home/home.css
+++ b/src/views/Home/home.css
@@ -1,4 +1,6 @@
 .home{
-    background-color: cyan;
+    background-color: beige;
     color: blueviolet;
+    margin: 0;
+    min-height: 100vh;
 }
